--- a/EventManager.Client/wwwroot/index.html
+++ b/EventManager.Client/wwwroot/index.html
@@ -12,6 +12,7 @@
     <link href="_content/MatBlazor/dist/matBlazor.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap"
           rel="stylesheet" />
+    <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
 </head>
 
   <body>
@@ -26,5 +27,6 @@
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="_content/MatBlazor/dist/matBlazor.js"></script>
     <script src="js/download.js"></script>
+    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
   </body>
 </html>
