Fix main errors

--- a/EventManager.Client/wwwroot/index.html
+++ b/EventManager.Client/wwwroot/index.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport"
@@ -9,13 +9,15 @@
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="EventManager.Client.styles.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap"
           rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
 </head>
 
   <body>
-    <app>Loading...</app>
+    <div id="app">Manager is Loading...</div>
 
     <div id="blazor-error-ui">
       An unhandled error has occurred.
